also there with tables and recent render

--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -47,12 +47,20 @@ cat("\\begin{flushleft}\n")  # or use \\aggedright if you prfer
 catch_table |>
   dplyr::filter(Year > 2014) |>
  gt::gt() |>
-   gt::tab_options(
-     table.font.size = 12,
-     latex.use_longtable = TRUE,
-     table.width = pct(60) # trying to make it fit better
-   ) |>
-   gt::as_latex()
+  gt::cols_align(
+    align = "center"
+  ) |>
+  gt::cols_width(
+    everything() ~ px(75)
+  ) |>
+  gt::as_latex()
+
+#   gt::tab_options(
+#     table.font.size = 12,
+#     latex.use_longtable = TRUE,
+#     table.width = pct(60) # trying to make it fit better
+#   ) |>
+#   gt::as_latex()
 
 cat("\\end{flushleft}\n")
 cat("\n\\end{landscape}\n")
