adding new age comps tables and figures
adding the modified age comps tables and figures (had to do new figures because did new tables, which was on my list anyway but yeah...)

--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -16,9 +16,9 @@ Model results are sensitive to whether natural mortality and steepness are estim
 
 #### Sensitivity to dataset choice and weighting schemes
 
-Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices, @tbl-sensitivities-like-comps-len1, @tbl-sensitivities-like-comps-len1 and @tbl-sensitivities-like-comps-age. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths2_spout through @fig-sens_lengths2_status). 
+Sensitivity analyses to dataset choices to examine the impact of including different data streams were conducted by selectively removing each data source using emphasis factors, as well as by including different weighting schemes for composition data. Summaries of model results for these sensitivities are presented in @tbl-sensitivities-like-indices to @tbl-sensitivities-like-comps-age2. Among these, the base model appears to be most sensitive to removing all length compositions, which show a significantly different biomass trajectory and a more optimistic estimate of stock status at the end of the time series (@fig-sens_lengths2_spout through @fig-sens_lengths2_status). 
 
-Removing all age compositions, \gls{iphc} age compositions only or applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age_spout and @fig-sens_age_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
+Removing all age compositions, \gls{iphc} age compositions only or applying the McAllister & Ianelli weighting scheme also result in slightly more optimistic estimates of stock status at the end of the time series compared to the base model (@fig-sens_age1_spout to @fig-sens_age2_status). Furthermore, models with all abundance and \gls{iphc} indices removed resulted in slightly less optimistic estimates of spawning output and stock status at the end of the time series (@fig-sens_indices_spout and @fig-sens_indices_status). Models removing the remaining indices consecutively did not show large differences in the final stock status estimate. A summary of the relative changes in management quantities from all sensitivity models is shown in @fig-sens_sum, and without the removal of all length composition data in @fig-sens_sum_no_lengths.
  
 ### Retrospective Analysis
 
