--- a/report/09_figures.qmd
+++ b/report/09_figures.qmd
@@ -885,26 +885,50 @@ knitr::include_graphics(
 \clearpage
 
 ```{r}
-#| label: fig-sens_age_spout
+#| label: fig-sens_age1_spout
 #| echo: false
 #| warning: false
 #| eval: true
 #| fig-cap: "Spawning output (millions of eggs) across age composition inclusion sensitivities."
 #
 knitr::include_graphics(
-    "figures/sensitivities/age_compscompare2_spawnbio_uncertainty.png"
+    "figures/sensitivities/age_comps_1compare2_spawnbio_uncertainty.png"
 )
 ```
 
 ```{r}
-#| label: fig-sens_age_status
+#| label: fig-sens_age1_status
 #| echo: false
 #| warning: false
 #| eval: true
 #| fig-cap: "Relative spawning output across age composition inclusion sensitivities."
 #
 knitr::include_graphics(
-    "figures/sensitivities/age_compscompare4_Bratio_uncertainty.png"
+    "figures/sensitivities/age_comps_1compare4_Bratio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-sens_age2_spout
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Spawning output (millions of eggs) across age composition inclusion sensitivities."
+#
+knitr::include_graphics(
+    "figures/sensitivities/age_comps_2compare2_spawnbio_uncertainty.png"
+)
+```
+
+```{r}
+#| label: fig-sens_age2_status
+#| echo: false
+#| warning: false
+#| eval: true
+#| fig-cap: "Relative spawning output across age composition inclusion sensitivities."
+#
+knitr::include_graphics(
+    "figures/sensitivities/age_comps_2compare4_Bratio_uncertainty.png"
 )
 ```
 
