--- a/report/04c_model_diagnostics.qmd
+++ b/report/04c_model_diagnostics.qmd
@@ -22,8 +22,7 @@ Removing all age compositions, \gls{iphc} age compositions only or applying the 
  
 ### Retrospective Analysis
 
-A retrospective analysis was conducted by running the base model with data removed for the past 5 years. Comparisons of the time series of absolute and relative spawning output
-and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recent recruitment deviations, which were negative in the base model, regressed towards the spawner-recruit curve, indicating closer to average recruitments in those years, with higher uncertainty, as data were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
+A retrospective analysis was conducted by running the base model with data removed for the past 5 years. Comparisons of the time series of absolute and relative spawning output and recruitment deviations time series for the runs are shown in @fig-retro-sp-output, @fig-retro-rel-biomass, and @fig-retro-recruit-dev, respectively. Recent recruitment deviations, which were negative in the base model, regressed towards the spawner-recruit curve, indicating closer to average recruitments in those years, with higher uncertainty, as data were removed. However, the change is not large, indicating that the new data are consistent with previous values or the sample sizes are too small to have any impact.
  
 General trends in relative depletion (or spawning output) have been relatively stable across assessments (@fig-status_assmnts), with a decline throughout the later half of the 1900’s as the stock was fished down, followed by a reversal in the overall status after substantial catch restrictions were implemented in 2002. Across the most recent assessments, the 2017 assessment [@gertseva_stock_2017] appears to have the most pessimistic depletion across the stock decline in the 1900s but otherwise, the relative depletion trend appears to be similar across the 2011, 2017 and the 2025 assessment as the stock has rebounded from its lowest status. 
 
